Basic CRUD operations for pet api
